tests/NormalTests/paczka1/small_fuzzy/22413370.err
Error in line 7: WLx2Z6H1TPw S177 19,1
Error in line 10: Y2UU3SI A964 185,93
Error in line 14: S301 A964 51,1
